--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "portfolio",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
+  "description": "A simple  and responsive portfolio app.",
   "dependencies": {
     "@react-pdf/renderer": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.2",
