--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # IDE directory
-.vscode
-.idea
+/.vscode/
+/.idea/
 
 # dependencies
 /node_modules
